# limitys

./: Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  indirect-package-names.yml  limitys.ABOUT  mkdocs.yml  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256
docs/: SUMMARY.md  api.md  book.toml  changes.md  index.md  install.md  test-coverage.md  usage.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  indirect-package-names.yml  mkdocs.yml  monthly-downloads.json  packaging-facts.json  third-party-fallbacks.yml
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
example/: basic.py
limitys/: __init__.py  __main__.py  align.py  cli.py  limitys.py  rule_if.py  stop.py
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
test/: test_cli.py
test/fixtures/basic/: documents.json  documents.yml
